time to do class